--- a/ex3/example.html
+++ b/ex3/example.html
@@ -11,6 +11,6 @@
       <img src="images/teacher.png" id="teacher2" alt="" />
       <section id="blackboard"></section>
     </section>
-    <script src="js/example1.js"></script>
+    <script src="js/example.js"></script>
   </body>
 </html>
