7 월 3 일, 프로그래밍 (Ajax) 수업 소스.

--- a/jQuery/0625_13.html
+++ b/jQuery/0625_13.html
@@ -6,6 +6,10 @@
 <script src="js/jquery.js"></script>
 <script>
 $(function( ){
+        var topNum = $("h1").offset().top;
+        $(window).scrollTop(topNum);
+        var sct = $(window).scrollTop();
+        console.log(sct);
 
 });
 </script>
