--- a/jQuery/0625_17.html
+++ b/jQuery/0625_17.html
@@ -6,7 +6,8 @@
 <script src="js/jquery.js"></script>
 <script>
 $(function( ){
-
+	$("h2").replaceWith("<h3> replace method </h3>");
+	$("<p> Change </p>").replaceAll("div");
 });
 </script>
 </head>
