--- a/jQuery/0625_15.html
+++ b/jQuery/0625_15.html
@@ -6,7 +6,8 @@
 <script src="js/jquery.js"></script>
 <script>
 $(function( ){
-
+	$("<li> appendTo </li>").appendTo("#listZone");
+	$("#listZone").prepend("<li> prepend </li>");
 });
 </script>
 </head>
