--- a/jQuery/0625_16.html
+++ b/jQuery/0625_16.html
@@ -6,7 +6,10 @@
 <script src="js/jquery.js"></script>
 <script>
 $(function( ){
-
+	var copyObj = $(".box1").children().clone();
+	$(".box2").remove();
+	$(".box3").empty();
+	$(".box3").append(copyObj);
 });
 </script>
 </head>
