--- a/jQuery/contains.html
+++ b/jQuery/contains.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>:contains(text) Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
-  $("div:contains('John')").css("text-decoration", "underline");
+$(function(){
+  $("di:contains('John')").css("text-decoration", "underline");
 });
 
 </script>
