--- a/jQuery/empty.html
+++ b/jQuery/empty.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>:empty Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
-  $("td:empty").text("빈 문자열").css("background-color", "green");
+$(function(){
+  $("td:empty").css("background-color", "green").text("빈 문자열");
 });
 
 </script>
