--- a/jQuery/eq.html
+++ b/jQuery/eq.html
@@ -3,13 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>:eq(index) Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-  $(document).ready(function(){
+  $(function(){
     $("td:eq(2)").css("background-color", "green");
     $("td:eq(-1)").css("background-color", "green");
-
-  })
+  });
 </script>
 </head>
 <body>
