--- a/jQuery/even odd.html
+++ b/jQuery/even odd.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>:even 및 :odd Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
-  $("tr:even").css("background-color", "#bbf");
-  $("tr:odd").css("font-size", "20px");
-});
+  $(function(){
+    $("td:even").css("background-color", "#bbf");
+    $("td:odd").css("font-size", "20pt");
+  });
 </script>
 </head>
 <body>
