--- a/jQuery/ex02.html
+++ b/jQuery/ex02.html
@@ -5,10 +5,10 @@
         <title> $("tag") 선택자 실습 </title>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script>
-            $(document).ready(function(){
+            $(function() {
                 $("div").css("color", "red");
-                console.log("첫 번째 div 값 : " + $("div")[0].innerHTML);
-                console.log("두 번째 div 값 : " + $("div")[1].innerHTML);
+                console.log("첫 번째 div 의 값 : " + $("div")[0].innerHTML);
+                console.log("두 번째 div 의 값 : " + $("div")[1].innerHTML);
             })
         </script>
     </head>
