--- a/jQuery/ex08.html
+++ b/jQuery/ex08.html
@@ -5,9 +5,9 @@
         <title> $("ancestor descendant") 선택자 실습 </title>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script>
-            $(document).ready(function(){
-                $("form input").css("border", "2px dotted blue");
-                $("form fieldset input").css("background-color", "yellow");
+            $(function() {
+               $("form input").css("border", "3px dotted blue");
+               $("form fieldset input").css("background-color", "yellow");
             });
         </script>
     </head>
