--- a/jQuery/ex09.html
+++ b/jQuery/ex09.html
@@ -5,7 +5,7 @@
         <title> $("prev + next") 선택자 실습 </title>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script>
-            $(document).ready(function(){
+            $(function() {
                 $("label + input").css("color", "blue").val("Labeled!");
             });
         </script>
