--- a/jQuery/first last.html
+++ b/jQuery/first last.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>:first 및 :last Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
+$(function(){
   $("tr:first").css("background-color", "#bbf");
   $("tr:last").css("font-style", "italic");
 });
