--- a/jQuery/first_child.html
+++ b/jQuery/first_child.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>:first-child Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
+$(function(){
   $("span:first-child").css("text-decoration", "underline");
   $("span:last-child").css("background-color", "green");
 });
