--- a/jQuery/not.html
+++ b/jQuery/not.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>:not() Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-  $(document).ready(function(){
-    $("inpit:not(:checked) + span").css("background-color", "green");
+  $(function(){
+    $("input:not(:checked) + span").css("background-color", "green");
   });
 </script>
 </head>
