--- a/jQuery/nth even odd.html
+++ b/jQuery/nth even odd.html
@@ -8,11 +8,11 @@
     float: left;
   }
  </style>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
-  $("li:nth-child(even)").css("font-size", "30px");
+$(function(){
   $("li:nth-child(odd)").css("background-color", "green");
+  $("li:nth-child(even)").css("font-size", "30px");
 });
 
 </script>
