--- a/jQuery/parent.html
+++ b/jQuery/parent.html
@@ -8,11 +8,11 @@
     width: 40px;
   }
 </style>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
+ $(function(){
   $("td:parent").css("background-color", "green");
-});
+ });
    
 </script>
 </head>
