--- a/jQuery/속성선택자1.html
+++ b/jQuery/속성선택자1.html
@@ -5,8 +5,8 @@
 <title> $(“selector[attr]") 선택자 실습 </title>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script type="text/javascript">
-    $(document).ready(function(){
-        $("[id]").css("font-size", "30px");
+    $(function(){
+        $("[id]").css("font-size", "20pt");
     });
 </script>
 </head>
