--- a/jQuery/속성선택자4.html
+++ b/jQuery/속성선택자4.html
@@ -5,10 +5,9 @@
 <title>$(“selector[attr*=‘value']") 선택자 실습</title>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script type="text/javascript">
-    $(document).ready(function(){
-        $( "input[name*='man']" ).val( "man 글자 포함" );
-        $( "input[name~='man']" ).css("border" , " 3px solid red");
-
+    $(function(){
+        $("input[name*='man']").val("man 글자 포함");
+        $("input[name~='man']").val("공백이 포함된 man 글자");
     });
 
 </script>
