--- a/jQuery/속성선택자5.html
+++ b/jQuery/속성선택자5.html
@@ -5,14 +5,14 @@
 <title>$(“selector[attr1=‘value1’][attrN=‘valueN’]") 선택자 실습</title>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script type="text/javascript">
-    $(document).ready(function(){
-        $("input[id][name$='man']").val("main 글자 포함");
+    $(function(){
+        $("input[id][name $= 'man']").val("man 글자 포함");
         $("input[value |= 'en']").css("border", "3px dotted red");
     });
 </script>
 </head>
 <body>
-<input id="man-news" name="man-news" value="en">
+<input id="man-news" name="man-news" value="-en">
 <input name="milkman" value="kr">
 <input id="letterman" name="new-letterman" >
 <input name="newmilk" value="en-UK">
