--- a/jQuery/2n.html
+++ b/jQuery/2n.html
@@ -8,12 +8,13 @@
     float: left;
   }
  </style>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-  $(document).ready(function(){
+  $(function(){
+    $("li:nth-child(2n + 1)").css("font-size","30px");
     $("li:nth-child(2n)").css("background-color", "green");
-    $("li:nth-child(2n+1)").css("font-size", "30px");
   });
+
 </script>
 </head>
 <body>
