--- a/jQuery/checkbox.html
+++ b/jQuery/checkbox.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>:checkbox , :checked Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-	$(document).ready(function(){
+	$(function(){
 		$("input:checkbox").wrap("<span></span>").parent().css("border", "3px dotted red");
 		$(":text").val($("input:checked").val());
-	})
+	});
 </script>
 </head>
 <body>
