--- a/jQuery/ex03.html
+++ b/jQuery/ex03.html
@@ -4,10 +4,10 @@
     <title> $("#id") 선택자 실습 </title>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script>
-        $(document).ready(function(){
+        $(function() {
             $("#target").css("color", "red");
-            console.log("#target 값 : " + $("#target").text());
-        });
+            console.log("#target 의 값 : " + $("#target").text());
+        })
     </script>
 </head>
 <body>
