--- a/jQuery/ex04.html
+++ b/jQuery/ex04.html
@@ -4,11 +4,13 @@
     <title> $(".class") 선택자 실습 </title>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script>
-        $(document).ready(function() {
-            $(".myClass").css("color", "red");
-            console.log("첫 번째 .myClass 값 : " + $(".myClass").first().text());
-            console.log("마지막 .myClass 값 : " + $(".myClass").last().text());
-        });
+      $(function() {
+          $(".myClass").css("color", "red");
+          console.log("첫 번째 .myClass 의 값 : " + $(".myClass")[0].innerHTML);
+          console.log("마지막 .myClass 의 값 : " + $(".myClass")[1].innerHTML);
+          console.log("첫 번째 .myClass 의 값 : " + $(".myClass").first().text());
+          console.log("마지막 .myClass 의 값 : " + $(".myClass").last().text());
+      })
     </script>
 </head>
 <body>
