--- a/jQuery/ex10.html
+++ b/jQuery/ex10.html
@@ -23,9 +23,9 @@
     </style>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script>
-        $(document).ready(function(){
+        $(function() {
             $("#prev ~ div").css("border", "3px groove blue");
-        });
+        })
     </script>
     </head>
     <body>
