--- a/jQuery/focus.html
+++ b/jQuery/focus.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>:focus Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-  $(document).ready(function(){
+  $(function(){
     $("input").click(function(){
       $("input:focus").css("background-color", "yellow");
       $("input:not(:focus)").removeAttr("style");
