--- a/jQuery/gt lt.html
+++ b/jQuery/gt lt.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>:gt 및 :lt Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-  $(document).ready(function(){
-    $("td:gt(4)").css("backgroundColor", "yellow");
+  $(function(){
+    $("td:gt(4)").css("background-color", "yellow");
     $("td:gt(-2)").text("gt(-2)");
   });
 </script>
