--- a/jQuery/has.html
+++ b/jQuery/has.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>:has(selector) Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
+$(function(){
     $("div:has(p)").css("background-color", "green");
 });
 </script>
