--- a/jQuery/nth_child.html
+++ b/jQuery/nth_child.html
@@ -8,11 +8,11 @@
     float: left;
   }
  </style>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
-  $("li:nth-child(2)").css("font-size", "30px");
-});
+  $(function(){
+    $("li:nth-child(2)").css("font-size", "30px");
+  });
 
 </script>
 </head>
