--- a/jQuery/onlychild.html
+++ b/jQuery/onlychild.html
@@ -8,9 +8,9 @@
     float: left;
   }
  </style>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
+$(function(){
   $("li:only-child").css("font-size", "30px");
 });
 
