--- a/jQuery/select.html
+++ b/jQuery/select.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>:selected Filter Selector</title>
-<script type="text/javascript" src="jquery-3.5.1.js"></script>
+<script type="text/javascript" src="js/jquery-3.5.1.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
+$(function(){
   $("select").change(function(){
-    var data = $(":selected").text();
+    var data = $(":selected").val();
     $("span").text(data);
-    });
+  });
 });
 
 </script>
