--- a/jQuery/속성선택자2.html
+++ b/jQuery/속성선택자2.html
@@ -5,10 +5,11 @@
 <title>$(“selector[attr=‘value']") 선택자 실습</title>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
-     $( "a[href='https://naver.com']").css( "font-size", "40px" );
-       $( "a[href !='https://naver.com']").css( "color", "red" );
+$(function(){
+   $("a[href='https://naver.com']").css("font-size", "30px");
+   $("a[href!='https://naver.com']").css("color", "red");
 });
+
 
 </script>
 </head>
